--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-
+    <head>
+      <title>
+        TITTLE
+        </title>
+        </head>
   <body>
     Hello there, awesome person! 
   </body>
