--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
       <title>
         TITTLE
+          <link rel="stylesheet" href="style.css">
         </title>
         </head>
   <body>
